--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "dotenv": "^16.0.3",
     "loading-cli": "^1.1.0",
     "puppeteer": "^20.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.2.0"
   }
 }
