--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "puppeteer": "^20.1.0"
   },
   "devDependencies": {
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "typescript": "^5.2.2"
   }
 }
